Inject and add app constant google api key

--- a/client/app.template.html
+++ b/client/app.template.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <base href="/">
-    <title>Angular Full-Stack Generator</title>
+    <title>Free location search</title>
+    <link rel="shortcut icon" type="image/x-icon" href="../assets/images/logo.ico" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -24,9 +25,10 @@
       ga('create', 'UA-XXXXX-X');
       ga('send', 'pageview');
     </script>
-
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCypTS4spJ3xv4U53sAy9KJKE9hqEcPyuw&libraries=places"></script>
+    
     <navbar></navbar>
     <div ui-view=""></div>
-    <footer></footer>
+    <!-- <footer></footer> -->
 </body>
 </html>
