--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,28 +1,13 @@
-<header class="hero-unit" id="banner">
-  <div class="container">
-    <h1>'Allo, 'Allo!</h1>
-    <p class="lead">Kick-start your next web app with Angular Fullstack</p>
-    <img src="assets/images/yeoman.png" alt="I'm Yeoman">
-  </div>
-</header>
-
 <div class="container">
-  <div class="row">
-    <div class="col-lg-12">
-      <h1 class="page-header">Features:</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="thing in $ctrl.awesomeThings">
-        <li><a href="#" uib-tooltip="{{thing.info}}">{{thing.name}}<button type="button" class="close" ng-click="$ctrl.deleteThing(thing)">&times;</button></a></li>
-      </ul>
-    </div>
-  </div>
-
-  <form class="thing-form">
-    <label>Syncs in realtime across clients</label>
-    <p class="input-group">
-      <input type="text" class="form-control" placeholder="Add a new thing here." ng-model="$ctrl.newThing">
-      <span class="input-group-btn">
-        <button type="submit" class="btn btn-primary" ng-click="$ctrl.addThing()">Add New</button>
-      </span>
-    </p>
+  <form class="">
   </form>
+  <div class="row map col-xs-12 col-md-6" id="googleMap">
+  </div>
+  <div class="col-xs-12 col-md-6">
+    <input type="text" id="texts" ng-model="$ctrl.sample">
+<!--     <input type="text"
+      ng-model="ctrl.colorName"
+      placeholder="Color Name. Try 'r' or 'b'"
+      auto-complete="ctrl.autoCompleteOptions" /> -->
+  </div>
 </div>
