--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -1,47 +1,30 @@
 <div class="container">
-  <div class="row">
-    <div class="col-sm-12">
-      <h1>Login</h1>
-      <p>Accounts are reset on server restart from <code>server/config/seed.js</code>. Default account is <code>test@example.com</code> / <code>test</code></p>
-      <p>Admin account is <code>admin@example.com</code> / <code>admin</code></p>
-    </div>
-    <div class="col-sm-12">
+  <div class="col-md-offset-3 col-md-6 panel">
+    <div class="panel-body">
+      <div class="text-center login-logo">
+        <img src="../assets/images/logo.png">
+        <div class="error-message" ng-if="vm.error">
+          <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+          <span ng-bind="'You have entered an incorrect email and password'"></span>          
+        </div>
+      </div>
       <form class="form" name="form" ng-submit="vm.login(form)" novalidate>
-
         <div class="form-group">
-          <label>Email</label>
-
-          <input type="email" name="email" class="form-control" ng-model="vm.user.email" required>
+          <input type="email" name="email" class="form-control login-inputs" ng-model="vm.user.email" placeholder="you@example.com" ng-class="{'has-error' : form.email.$error.required && vm.submitted}" required>
         </div>
-
         <div class="form-group">
-          <label>Password</label>
-
-          <input type="password" name="password" class="form-control" ng-model="vm.user.password" required>
+          <input type="{{ vm.showPassword ? 'text' : 'password' }}" name="password" class="form-control login-inputs password" ng-model="vm.user.password" placeholder="password" ng-class="{'has-error' : form.password.$error.required && vm.submitted}" required>
+          <span class="password-eye glyphicon" ng-class="{ 'glyphicon-eye-open' : vm.showPassword, 'glyphicon-eye-close' : !vm.showPassword}" ng-click="vm.showPassword = !vm.showPassword"></span>
+          <a class="pull-right" href="">Forgot Password?</a>
         </div>
-
-        <div class="form-group has-error">
-          <p class="help-block" ng-show="form.email.$error.required && form.password.$error.required && vm.submitted">
-             Please enter your email and password.
-          </p>
-          <p class="help-block" ng-show="form.email.$error.email && vm.submitted">
-             Please enter a valid email.
-          </p>
-
-          <p class="help-block">{{ vm.errors.login }}</p>
-        </div>
-
-        <div>
-          <button class="btn btn-inverse btn-lg btn-login" type="submit">
+        <div class="nxt-group">
+          <button type="submit" class="btn-lg col-xs-12 app-default-btn">
             Login
           </button>
-          <a class="btn btn-default btn-lg btn-register" ui-sref="signup">
-            Register
-          </a>
+          <span>Dont have an account? </span>
+          <a ui-sref="signup">Create one.</a>
         </div>
-
       </form>
     </div>
   </div>
-  <hr>
 </div>
