--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -4,13 +4,15 @@
       <div class="text-center login-logo">
         <img src="../assets/images/logo.png">
         <div class="error-message" ng-if="vm.error">
-          <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-          <span ng-bind="'You have entered an incorrect email and password'"></span>          
+          <small class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></small>
+          <small ng-bind="'You\'ve entered an incorrect email and password'"></small>
         </div>
       </div>
-      <form class="form" name="form" ng-submit="vm.login(form)" novalidate>
+      <form class="form login" name="form" ng-submit="vm.login(form)" novalidate>
         <div class="form-group">
-          <input type="email" name="email" class="form-control login-inputs" ng-model="vm.user.email" placeholder="you@example.com" ng-class="{'has-error' : form.email.$error.required && vm.submitted}" required>
+          <input type="email" name="email" class="form-control login-inputs" ng-model="vm.user.email" placeholder="you@example.com" ng-class="{'has-error' : (form.email.$error.required || form.email.$error.email) && vm.submitted}" required>
+          <small class="validation-message" ng-show="form.email.$error.required && vm.submitted" ng-bind="'Please provide your email.'"></small>
+          <small class="validation-message" ng-show="form.email.$error.email && vm.submitted" ng-bind="'Doesn\'t look like a valid email.'"></small>
         </div>
         <div class="form-group">
           <input type="{{ vm.showPassword ? 'text' : 'password' }}" name="password" class="form-control login-inputs password" ng-model="vm.user.password" placeholder="password" ng-class="{'has-error' : form.password.$error.required && vm.submitted}" required>
@@ -21,7 +23,7 @@
           <button type="submit" class="btn-lg col-xs-12 app-default-btn">
             Login
           </button>
-          <span>Dont have an account? </span>
+          <span>Don't have an account? </span>
           <a ui-sref="signup">Create one.</a>
         </div>
       </form>
