--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -1,80 +1,64 @@
 <div class="container">
-  <div class="row">
-    <div class="col-sm-12">
-      <h1>Sign up</h1>
-    </div>
-    <div class="col-sm-12">
-      <form class="form" name="form" ng-submit="vm.register(form)" novalidate>
-
-        <div class="form-group" ng-class="{ 'has-success': form.name.$valid && vm.submitted,
-                                            'has-error': form.name.$invalid && vm.submitted }">
-          <label>Name</label>
-
-          <input type="text" name="name" class="form-control" ng-model="vm.user.name"
-                 required/>
-          <p class="help-block" ng-show="form.name.$error.required && vm.submitted">
-            A name is required
-          </p>
+  <div class="col-md-offset-3 col-md-6 panel">
+    <div class="panel-body">
+      <div class="text-center login-logo">
+        <img src="../assets/images/logo.png">
+      </div>
+      <form class="form signup" name="form" ng-submit="vm.register(form)" novalidate>
+        <div class="form-group">
+          <input type="email" name="email"
+            class="form-control login-inputs"
+            ng-model="vm.user.email"
+            placeholder="you@example.com"
+            ng-class="{'has-error' : (form.email.$invalid ||
+                                      form.email.$error.required ||
+                                      form.email.$error.mongoose) && vm.submitted}"
+            required mongoose-error/>
+            <small class="validation-message" ng-show="form.email.$error.email && vm.submitted" ng-bind="'Doesn\'t look like a valid email.'"></small>
+            <small class="validation-message" ng-show="form.email.$error.required && vm.submitted" ng-bind="'What\'s your email address?'"></small>
+            <small class="validation-message" ng-show="form.email.$error.mongoose" ng-bind="vm.errors.email"></small>
         </div>
 
-        <div class="form-group" ng-class="{ 'has-success': form.email.$valid && vm.submitted,
-                                            'has-error': form.email.$invalid && vm.submitted }">
-          <label>Email</label>
-
-          <input type="email" name="email" class="form-control" ng-model="vm.user.email"
-                 required
-                 mongoose-error/>
-          <p class="help-block" ng-show="form.email.$error.email && vm.submitted">
-            Doesn't look like a valid email.
-          </p>
-          <p class="help-block" ng-show="form.email.$error.required && vm.submitted">
-            What's your email address?
-          </p>
-          <p class="help-block" ng-show="form.email.$error.mongoose">
-            {{ vm.errors.email }}
-          </p>
+        <div class="form-group">
+          <input type="{{ vm.showPassword ? 'text' : 'password' }}" name="password"
+            class="form-control login-inputs password"
+            ng-model="vm.user.password"
+            ng-minlength="3"
+            placeholder="Create a password"
+            ng-class="{'has-error' : (form.password.$invalid ||
+                                      form.password.$error.required ||
+                                      form.password.$error.minlength ||
+                                      form.password.$error.mongoose) && vm.submitted}"
+            required mongoose-error/>
+          <span class="password-eye glyphicon" ng-class="{ 'glyphicon-eye-open' : vm.showPassword, 'glyphicon-eye-close' : !vm.showPassword}" ng-click="vm.showPassword = !vm.showPassword"></span>
+          <small class="validation-message" ng-show="(form.password.$error.minlength || form.password.$error.required) && vm.submitted" ng-bind="'Password must be at least 3 characters.'"></small>
+          <small class="validation-message" ng-show="form.password.$error.mongoose" ng-bind="vm.errors.password"></small>
         </div>
 
-        <div class="form-group" ng-class="{ 'has-success': form.password.$valid && vm.submitted,
-                                            'has-error': form.password.$invalid && vm.submitted }">
-          <label>Password</label>
-
-          <input type="password" name="password" class="form-control" ng-model="vm.user.password"
-                 ng-minlength="3"
-                 required
-                 mongoose-error/>
-          <p class="help-block"
-             ng-show="(form.password.$error.minlength || form.password.$error.required) && vm.submitted">
-            Password must be at least 3 characters.
-          </p>
-          <p class="help-block" ng-show="form.password.$error.mongoose">
-            {{ vm.errors.password }}
-          </p>
+        <div class="form-group">
+          <input type="{{ vm.showConfirmPassword ? 'text' : 'password' }}" name="confirmPassword"
+            class="form-control login-inputs password"
+            ng-model="vm.user.confirmPassword"
+            match="vm.user.password"
+            ng-minlength="3"
+            placeholder="Confirm password"
+            ng-class="{'has-error' : (form.confirmPassword.$invalid ||
+                                      form.confirmPassword.$error.required ||
+                                      form.confirmPassword.$error.mongoose) && vm.submitted}"
+            required/>
+          <span class="password-eye glyphicon" ng-class="{ 'glyphicon-eye-open' : vm.showConfirmPassword, 'glyphicon-eye-close' : !vm.showConfirmPassword}" ng-click="vm.showConfirmPassword = !vm.showConfirmPassword"></span>
+          <small class="validation-message" ng-show="form.confirmPassword.$error.match && vm.submitted" ng-bind="'Password must match.'"></small>
         </div>
-
-        <div class="form-group" ng-class="{ 'has-success': form.confirmPassword.$valid && vm.submitted,
-                                            'has-error': form.confirmPassword.$invalid && vm.submitted }">
-          <label>Confirm Password</label>
-          <input type="password" name="confirmPassword" class="form-control" ng-model="vm.user.confirmPassword"
-                 match="vm.user.password"
-                 ng-minlength="3" required/>
-          <p class="help-block"
-             ng-show="form.confirmPassword.$error.match && vm.submitted">
-            Passwords must match.
-          </p>
-        </div>
-
-        <div>
-          <button class="btn btn-inverse btn-lg btn-register" type="submit">
+        <div class="nxt-group">
+          <button type="submit" class="btn-lg col-xs-12 app-default-btn">
             Sign up
           </button>
-          <a class="btn btn-default btn-lg btn-login" ui-sref="login">
-            Login
-          </a>
+          <div class="pull-right">
+            <span>Go to </span>
+            <a ui-sref="login">Login page.</a>              
+          </div>
         </div>
-
       </form>
     </div>
   </div>
-  <hr>
 </div>
